Comecei a escrever o conteúdo

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <main>
         <header>
-           <h1>Titulo do Site</h1> 
+           <h1>Cursos Grátis</h1> 
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 co CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi harum illo fugit reiciendis, consequuntur suscipit dolor ex blanditiis, quisquam architecto amet, rerum laudantium! Voluptatem eos sunt exercitationem vitae modi voluptatum.</p>
         </article>
         <article>
-           <h2>Artigo 002</h2> 
-           <p>Texto Artigo 002</p>
+           <h2>Curso de JavaScript</h2> 
+           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem quaerat minima sapiente reiciendis sequi necessitatibus beatae autem odit, accusamus et, quas qui ullam blanditiis voluptates nisi accusantium doloremque maiores non!</p>
         </article>
     </main>
 </body>
