--- a/index.html
+++ b/index.html
@@ -9,14 +9,17 @@
 <body>
     <main>
         <header>
-           <h1>Cursos Grátis</h1> 
+           <h1>Cursos Grátis</h1>
+           <img src="" alt="Curso e Video">
         </header>
         <article>
             <h2>Curso de HTML5 co CSS3</h2>
+            <img class="lado" src="" alt="Curso de HTML">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi harum illo fugit reiciendis, consequuntur suscipit dolor ex blanditiis, quisquam architecto amet, rerum laudantium! Voluptatem eos sunt exercitationem vitae modi voluptatum.</p>
         </article>
         <article>
            <h2>Curso de JavaScript</h2> 
+           <img class="lado" src="" alt="Curso JS">
            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem quaerat minima sapiente reiciendis sequi necessitatibus beatae autem odit, accusamus et, quas qui ullam blanditiis voluptates nisi accusantium doloremque maiores non!</p>
         </article>
     </main>
