--- a/index.html
+++ b/index.html
@@ -10,17 +10,19 @@
     <main>
         <header>
            <h1>Cursos Grátis</h1>
-           <img src="" alt="Curso e Video">
+           <img src="imagem/curso-em-video-cor.png" alt="Curso em Video">
         </header>
         <article>
             <h2>Curso de HTML5 co CSS3</h2>
-            <img class="lado" src="" alt="Curso de HTML">
+            <img class="lado" src="imagem/curso-html-css.png" alt="Curso de HTML">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi harum illo fugit reiciendis, consequuntur suscipit dolor ex blanditiis, quisquam architecto amet, rerum laudantium! Voluptatem eos sunt exercitationem vitae modi voluptatum.</p>
+            <p><a href="curso-html.html">Acesse o curso de HTML5</a></p>
         </article>
         <article>
            <h2>Curso de JavaScript</h2> 
-           <img class="lado" src="" alt="Curso JS">
+           <img class="lado" src="imagem/curso-javascript.png" alt="Curso JS">
            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem quaerat minima sapiente reiciendis sequi necessitatibus beatae autem odit, accusamus et, quas qui ullam blanditiis voluptates nisi accusantium doloremque maiores non!</p>
+           <p><a href="curso-js.html">Acesse o curso de JavaScript</a></p>
         </article>
     </main>
 </body>
